--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.0.5"
+    "@prisma/client": "^5.10.2",
+    "@prisma/extension-accelerate": "^0.6.3",
+    "hono": "^4.0.5",
+    "prisma": "^5.10.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240208.0",
