--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -1,8 +1,10 @@
-name = "backend"
+name = "medium-clone"
 compatibility_date = "2023-12-01"
 
-# [vars]
+[vars]
 # MY_VARIABLE = "production_value"
+DATABASE_URL="
+JWT_SECRET="jwtsecret123"
 
 # [[kv_namespaces]]
 # binding = "MY_KV_NAMESPACE"
