add email in variables

--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -3,8 +3,8 @@ compatibility_date = "2023-12-01"
 
 [vars]
 # MY_VARIABLE = "production_value"
-DATABASE_URL="
-JWT_SECRET="jwtsecret123"
+DATABASE_URL=""
+JWT_SECRET=""
 
 # [[kv_namespaces]]
 # binding = "MY_KV_NAMESPACE"
